--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -101,9 +101,9 @@ footer {
     display: none;
 }
 
-#example_wrapper {
+#dataTable_wrapper {
     width: 100%;
-    margin: 20px;
+    margin: 20px 20px 20px 300px;
 }
 
 .page-item.active .page-link, .emphasized-sidebar-item {
@@ -147,4 +147,15 @@ textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus {
     box-shadow: none;
+}
+
+.admin-sidebar {
+    width: 280px;
+    height: 100%;
+    position: fixed;
+    z-index: 10;
+}
+
+.admin-main-area {
+    margin: 20px 20px 20px 300px;
 }
