--- a/src/main/webapp/templates/admin/index.html
+++ b/src/main/webapp/templates/admin/index.html
@@ -7,25 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- jQuery -->
-    <script src="../../lib/jquery/jquery-3.6.0.min.js" routeType="text/javascript"></script>
+    <script src="../../static/lib/jquery/jquery-3.6.0.min.js"></script>
 
     <!-- Bootstrap 5 -->
-    <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js" routeType="text/javascript"></script>
+    <link href="../../static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../../static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Font Awesome -->
-    <link href="../../lib/fontawesome/css/all.min.css" rel="stylesheet">
+    <link href="../../static/lib/fontawesome/css/all.min.css" rel="stylesheet">
 
     <!-- DataTables -->
-    <script src="../../lib/datatables/js/jquery.dataTables.min.js"></script>
-    <link href="../../lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-    <script src="../../lib/datatables/js/dataTables.bootstrap5.min.js"></script>
+    <script src="../../static/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <link href="../../static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <script src="../../static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
 
     <!-- Custom CSS -->
-    <link href="../../css/style.css" rel="stylesheet">
+    <link href="../../static/css/style.css" rel="stylesheet">
 
     <!-- Custom JS -->
-    <script src="../../js/script.js" routeType="text/javascript"></script>
+    <script src="../../static/js/script.js"></script>
 </head>
 <body>
 <main class="d-flex flex-row h-100">
@@ -138,8 +138,11 @@
 <script>
     $(document).ready(function() {
         $('#example').dataTable({
-            "scrollY": "80vh",
-            scrollResize: true
+            scrollY: "80vh",
+            scrollResize: true,
+            processing: true,
+            serverSide: true,
+            ajax: "http://localhost:8080/api/get_users"
         });
     });
 </script>
