--- a/src/main/webapp/static/css/admin/admin.css
+++ b/src/main/webapp/static/css/admin/admin.css
@@ -1,3 +1,10 @@
+.emphasized-logo-text {
+    background-color: #9c1510;
+    color: white;
+    padding: 3px 6px;
+    border-radius: 10%;
+}
+
 .page-item.active .page-link, .emphasized-sidebar-item {
     background-color: #827e7e !important;
     border-color: #827e7e;
