--- a/src/main/webapp/static/css/admin/admin.css
+++ b/src/main/webapp/static/css/admin/admin.css
@@ -25,3 +25,19 @@
 .admin-main-area {
     margin: 20px 20px 20px 300px;
 }
+
+.create-button {
+    width: 10%;
+}
+
+.select2-selection__rendered {
+    line-height: 28px !important;
+}
+
+.select2-container .select2-selection--single {
+    height: 40px !important;
+}
+
+.select2-selection__arrow {
+    display: none;
+}
