--- a/src/main/webapp/static/css/common/header.css
+++ b/src/main/webapp/static/css/common/header.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 footer {
@@ -14,7 +15,7 @@ img {
 }
 
 /* Circled profile picture */
-.profile-picture-holder {
+.profile-image-holder {
     border-radius: 50%;
     height: 2.5em;
     width: 2.5em;
@@ -22,7 +23,12 @@ img {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    object-fit: none;
+}
+
+.profile-image {
+    height: 2.5em;
+    width: 2.5em;
+    object-fit: cover;
 }
 
 /* Changes caret in nav dropdown */
@@ -46,3 +52,15 @@ img {
     border-radius: 10%;
 }
 
+div.dts_label {
+    display: none !important;
+}
+
+.scrollbar::-webkit-scrollbar {
+    width: 6px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+}
