--- a/src/main/webapp/static/css/common/header.css
+++ b/src/main/webapp/static/css/common/header.css
@@ -56,11 +56,11 @@ div.dts_label {
     display: none !important;
 }
 
-.scrollbar::-webkit-scrollbar {
+.dataTables_scrollBody::-webkit-scrollbar {
     width: 6px;
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
+.dataTables_scrollBody::-webkit-scrollbar-thumb {
     border-radius: 5px;
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
 }
